[gd_scene load_steps=7 format=3 uid="uid://dpgaa4m0svt8a"]

[ext_resource type="Script" path="res://scripts/splitscreen.gd" id="1_ijt20"]
[ext_resource type="PackedScene" uid="uid://cm04mmmvwboov" path="res://scenes/entities/enemy.tscn" id="2_u4uux"]
[ext_resource type="PackedScene" uid="uid://ok187owkqej0" path="res://scenes/entities/bullet.tscn" id="3_s2b4k"]
[ext_resource type="PackedScene" uid="uid://b1yocmxgyedm0" path="res://scenes/levels/map.tscn" id="4_5asch"]
[ext_resource type="PackedScene" uid="uid://cgy7baksgv4me" path="res://scenes/backgrounds/parallax_background.tscn" id="4_av3e8"]
[ext_resource type="PackedScene" uid="uid://jfm88e0ih882" path="res://scenes/entities/player.tscn" id="5_5ljcd"]

[node name="Main" type="Node"]
script = ExtResource("1_ijt20")
enemy_scene = ExtResource("2_u4uux")
bullet_scene = ExtResource("3_s2b4k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="SubViewportContainer1" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport1" type="SubViewport" parent="VBoxContainer/HBoxContainer1/SubViewportContainer1"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
sdf_scale = 0
canvas_cull_mask = 4294967267
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="VBoxContainer/HBoxContainer1/SubViewportContainer1/SubViewport1" instance=ExtResource("4_av3e8")]
physics_interpolation_mode = 2
light_mask = 0
visibility_layer = 2

[node name="Map" parent="VBoxContainer/HBoxContainer1/SubViewportContainer1/SubViewport1" instance=ExtResource("4_5asch")]

[node name="Player" parent="VBoxContainer/HBoxContainer1/SubViewportContainer1/SubViewport1" instance=ExtResource("5_5ljcd")]
position = Vector2(-208, 241)

[node name="SubViewportContainer2" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="VBoxContainer/HBoxContainer1/SubViewportContainer2"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
canvas_cull_mask = 4294967269
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="VBoxContainer/HBoxContainer1/SubViewportContainer2/SubViewport2" instance=ExtResource("4_av3e8")]
physics_interpolation_mode = 2
light_mask = 0
visibility_layer = 4

[node name="Player2" parent="VBoxContainer/HBoxContainer1/SubViewportContainer2/SubViewport2" instance=ExtResource("5_5ljcd")]
position = Vector2(213, 320)
id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="SubViewportContainer3" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport3" type="SubViewport" parent="VBoxContainer/HBoxContainer2/SubViewportContainer3"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
canvas_cull_mask = 4294967273
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="VBoxContainer/HBoxContainer2/SubViewportContainer3/SubViewport3" instance=ExtResource("4_av3e8")]
physics_interpolation_mode = 2
light_mask = 0
visibility_layer = 8

[node name="Player3" parent="VBoxContainer/HBoxContainer2/SubViewportContainer3/SubViewport3" instance=ExtResource("5_5ljcd")]
position = Vector2(-745, 328)
id = 2

[node name="SubViewportContainer4" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport4" type="SubViewport" parent="VBoxContainer/HBoxContainer2/SubViewportContainer4"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
canvas_cull_mask = 4294967281
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ParallaxBackground" parent="VBoxContainer/HBoxContainer2/SubViewportContainer4/SubViewport4" instance=ExtResource("4_av3e8")]
physics_interpolation_mode = 2
light_mask = 0
visibility_layer = 16

[node name="Player4" parent="VBoxContainer/HBoxContainer2/SubViewportContainer4/SubViewport4" instance=ExtResource("5_5ljcd")]
position = Vector2(-1123, 327)
id = 3
